<?xml version="1.0"?>
<resources>
    <string name="app_name" translatable="false">Music Magician</string>
    <string name="tag_artist_and_album" translatable="false">%s (%s)</string>
    <string name="tag_title">Title</string>
    <string name="tag_artist">Artist</string>
    <string name="tag_album">Album</string>
    <string name="tag_year">Year</string>
    <string name="tag_track">Track</string>
    <string name="tag_genre">Genre</string>
    <string name="tag_lyrics">Lyrics</string>
    <string name="tag_comment">Comment</string>
    <string name="drawer_tracks">Tracks</string>
    <string name="drawer_albums">Albums</string>
    <string name="progress_loading_files">Loading music files&#8230;</string>
    <string name="progress_loading_search_results">Loading results&#8230;</string>
    <string name="progress_saving_tags">Saving tags&#8230;</string>
    <string name="progress_searching_lyrics">Searching lyrics&#8230;</string>
    <string name="button_albumart_autosearch">Autosearch</string>
    <string name="button_albumart_from_gallery">From gallery</string>
    <string name="button_albumart_reset">Reset albumart</string>
    <string name="search_title">Search</string>
    <string name="save_title">Save</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="no_media_found">No media found</string>
    <string name="search_results">Search results</string>
    <string name="tag_search_error_title">No results found</string>
    <string name="tag_search_error_substring">Edit music tags and try again</string>
    <string name="ok">OK</string>
    <string name="sort">Sort</string>
    <string name="tag_edit">Tags editor</string>
    <string name="album_edit">Album editor</string>
    <string name="refresh">Refresh</string>
    <string name="filed_to_set_field">Filed to set field: %s</string>
    <string name="az_title_sort">By title (A-Z)</string>
    <string name="za_title_sort">By title (Z-A)</string>
    <string name="az_artist_sort">By artist (A-Z)</string>
    <string name="za_artist_sort">By artist (Z-A)</string>
    <string name="newest_sort">Newest</string>
    <string name="oldest_sort">Oldest</string>
    <string name="by_year_latest_sort">By year (Latest)</string>
    <string name="by_year_earliest_sort">By year (Earliest)</string>
    <string name="search_tags">Search tags</string>
    <string name="search_lyrics">Search lyrics</string>
    <string name="toast_lyrics_inserted">Lyrics inserted</string>
    <string name="toast_lyrics_not_found">Lyrics not found</string>
    <string name="set_albumart_from_gallery">Set albumart from gallery</string>
    <string name="select_image">Select image</string>
    <string name="album_set_tags">*Changes will be applied to all tracks in album</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="about_app">About</string>
    <string name="settings_header_interface">Interface</string>
    <string name="settings_header_tags">Tags</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1653069327695649/4042627493</string>
    <string name="translate_app">Translate app</string>
    <string name="file_not_found">File not found or no longer available!</string>
    <string name="downloading_albumart">Downloading albumart. Please wait&#8230;</string>
    <string name="fix_tags">Fix tags</string>
    <string name="file_copy_error">File copy error</string>
    <string name="media_error_title">No media found</string>
    <string name="media_error_message">Get some songs and come back</string>
    <string name="no_results_found">No results found! Edit tags and try again!</string>
    <string name="album_not_found">Album not found or no longer available!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="apply_tags">Apply tags</string>
    <string name="editor_title">Editor</string>
    <string name="permissions_error_title">No permissions granted</string>
    <string name="permissions_error_message">The application requires permissions to read the device’s internal memory</string>
    <string name="permissions_error_button">Grant permissions</string>
    <string name="comment_pro_error">To edit a comment, you must purchase the PRO version of the application</string>
</resources>
