<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_24px"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item android:id="@+id/sort"
        android:icon="@drawable/ic_sort_24px"
        android:title="@string/sort"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/az_title_sort"
                    android:title="@string/az_title_sort" />
                <item android:id="@+id/za_title_sort"
                    android:title="@string/za_title_sort" />
                <item android:id="@+id/az_artist_sort"
                    android:title="@string/az_artist_sort" />
                <item android:id="@+id/za_artist_sort"
                    android:title="@string/za_artist_sort" />
                <item android:id="@+id/newest_sort"
                    android:title="@string/newest_sort" />
                <item android:id="@+id/oldest_sort"
                    android:title="@string/oldest_sort" />
            </group>
        </menu>
    </item>
</menu>