<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="@dimen/default_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/inputLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_editor_title"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/inputLayoutArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/tag_artist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_editor_artist"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/inputLayoutYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/tag_year">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_editor_year"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/album_set_tags"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>