<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        card_view:cardCornerRadius="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/inputLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/tag_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_editor_title"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoExtractUi" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/inputLayoutArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/tag_artist">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_editor_artist"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoExtractUi" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/inputLayoutAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/tag_album">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_editor_album"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoExtractUi" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:id="@+id/inputLayoutTracknumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_track"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/default_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/track_editor_track_number"
                        android:inputType="textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone|flagNoExtractUi" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:id="@+id/inputLayoutYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_year"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/track_editor_year"
                        android:inputType="textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone|flagNoExtractUi" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:id="@+id/inputLayoutGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_genre"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/track_editor_genre"
                        android:inputType="textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone|flagNoExtractUi" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/inputLayoutComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/tag_comment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_editor_comment"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoExtractUi" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/inputLayoutLyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag_lyrics">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_editor_lyrics"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:overScrollMode="always"
                    android:isScrollContainer="true"
                    android:imeOptions="actionDone|flagNoExtractUi" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.core.widget.NestedScrollView>
